--- a/product_management/templates/product_setting/detail.html
+++ b/product_management/templates/product_setting/detail.html
@@ -114,7 +114,7 @@
                           <td>{{ product.name }}</td>
                       </tr>
                       <tr>
-                          <td>Quantity/td>
+                          <td>Quantity </td>
                           <td><input type="number" id="quantityField" max="{{ product.quantity }}" value="1" min="1"></td>
                       </tr>
                       <tr>
@@ -158,7 +158,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" id="reviewConfirm" class="btn btn-primary">Buy</button>
+        <button type="button" id="buyConfirm" class="btn btn-primary">Buy</button>
       </div>
     </div>
   </div>
