--- a/templates/base.html
+++ b/templates/base.html
@@ -58,6 +58,11 @@
                                 Products
                             </a>
                         </li>
+                        <li>
+                            <a  class="btn btn-outline-dark"  href=" {% url 'sales:sales_page'%}">
+                                Sales
+                            </a>
+                        </li>
                     {% endif %}
 
                 {% endif %}
