add your orders template

--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,11 @@
                             </a>
                         </li>
                     {% endif %}
-
+                   <li>
+                    <a type="button" class="btn btn-outline-warning" href="{% url 'sales:user_orders' %}">
+                            Your Orders
+                        </a>
+                    </li>
                 {% endif %}
 
             </ul>
