--- a/sales/templates/sales_management/orders.html
+++ b/sales/templates/sales_management/orders.html
@@ -8,8 +8,8 @@
                     <table class="table-bordered" id="ordersTable">
                         <thead class="thead-light">
                             <tr>
-                                <th scope="col">#</th>
-                                <th scope="col">Product</th>
+                                <th scope="col">Order ID</th>
+                                <th scope="col">Product ID</th>
                                 <th scope="col">Quantity</th>
                                 <th scope="col">Total</th>
                                 <th scope="col">Date</th>
@@ -43,9 +43,10 @@
                  list = JSON.parse(JSON.stringify(answer));
                 console.log(list);
                 for(let i = 0; i < list.purchase_list.length; i++){
+                         var pID = list.purchase_list[i].product_id;
                          var row = '<tr>' +
                              '<td>'+list.purchase_list[i].id+'</td>' +
-                             '<td>'+list.purchase_list[i].product_id+'</td>' +
+                             '<td> <a href="/product/management/'+pID+'/detail">'+pID+'</a></td>' +
                              '<td>'+list.purchase_list[i].quantity+'</td>' +
                              '<td>'+list.purchase_list[i].total+'&euro; </td>' +
                              '<td>'+list.purchase_list[i].date+'</td>' +
