--- a/templates/home.html
+++ b/templates/home.html
@@ -3,5 +3,50 @@
     HOME
 {% endblock %}
 {% block content %}
+    <div class="container">
+        <div class="row justify-content-center">
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                 <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                  </ol>
 
+              <div class="carousel-inner" >
+                <div class="carousel-item active">
+                  <img class="d-block" src="/static/images/get_rid.png" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block " src="/static/images/sell_your_product.png" alt="Second slide"  >
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block " src="/static/images/choose.png" alt="Third slide">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+        </div>
+        <div class="row">
+            {% for product in products %}
+                <div class="col-sm-3">
+                    <div class="card" style="width: 18rem">
+                        <img class="card-img-top" src="{{ product.image.url }}" alt="Card image cap">
+                      <div class="card-body">
+
+                        <h5 class="card-title">{{ product.name }}</h5>
+                        <p class="card-text">{{ product.description}}</p>
+                        <p class="price"> {{ product.price }} &euro;</p>
+                        <a href="{% url 'product_management:product_detail' product.id %}" class="btn btn-primary">See product</a>
+                      </div>
+                </div>
+          </div>
+            {% endfor %}
+    </div>
 {% endblock %}
