--- a/templates/base.html
+++ b/templates/base.html
@@ -73,15 +73,15 @@
                 {% endif %}
 
             </ul>
-            <form class="form-inline my-2 my-lg-0">
+            <form class="form-inline my-2 my-lg-0" action="{% url 'search' %}" method="post"enctype="multipart/form-data"> {% csrf_token %}
                 <div class="form-check-inline">
-                 <select class="custom-select" id="formCategories">
+                    <select class="custom-select" id="formCategories">
                      <option value="all">All categories</option>
-                </select>
-            </div>
+                    </select>
+                </div>
 
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <button class="btn btn-outline-success my-2 my-sm-0" href="{% url 'search' %}"type="submit">Search</button>
             </form>
 
 
