--- a/templates/base.html
+++ b/templates/base.html
@@ -73,15 +73,15 @@
                 {% endif %}
 
             </ul>
-            <form class="form-inline my-2 my-lg-0" action="{% url 'search' %}" method="post"enctype="multipart/form-data"> {% csrf_token %}
-                <div class="form-check-inline">
-                    <select class="custom-select" id="formCategories">
+            <form class="form-inline my-2 my-lg-0" action="{% url 'search' %}"  method="POST" > {% csrf_token %}
+                <div class="form-group-inline">
+                    <select class="custom-select" id="category" name="category">
                      <option value="all">All categories</option>
                     </select>
                 </div>
 
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" href="{% url 'search' %}"type="submit">Search</button>
+                <input class="form-control mr-sm-2" name="query" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
 
 
@@ -102,9 +102,9 @@
             dataType: 'json',
              success : function (answer){
                  list = JSON.parse(JSON.stringify(answer));
-                 console.log(list.categories);
+
                  for(let i=0; i < list.categories.length; i++){
-                     $('#formCategories').append('<option value="'+list.categories[i].name+'">'+list.categories[i].name+'</option>')
+                     $('#category').append('<option value="'+list.categories[i].name+'">'+list.categories[i].name+'</option>')
                  }
                  //generateTable(list);
              },
