--- a/templates/search.html
+++ b/templates/search.html
@@ -1,8 +1,33 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    <div class="container">
 
-    <h1>SEARCH</h1>
+    </div>
+    <h3>Research for {{ request.POST.query }} Category: {{ request.POST.category }}</h3>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th scope="col"></th>
+          <th scope="col">Name</th>
+          <th scope="col">Description</th>
+          <th scope="col">Price</th>
+          <th scope ="col">Availability</th>
+        </tr>
+      </thead>
+      <tbody>
+      {% for product in products %}
+       <tr>
+          <td scope="col"><img width="100" height="70" class="img-fluid" src="{{ product.image.url }}"></td>
+          <td scope="col"> <a href="{% url 'product_management:product_detail' product.id %}">{{ product.name }}</a></td>
+          <td scope="col">{{ product.description }}</td>
+          <td scope="col">{{ product.price }}</td>
+          <td scope ="col">{{ product.quantity }}</td>
+       </tr>
+      {% endfor %}
+      </tbody>
+    </table>
+
 {% endblock %}
 
 {% block javascript %}
